available cars component, backend, maps

--- a/src/components/Styles/aboutus.css
+++ b/src/components/Styles/aboutus.css
@@ -18,9 +18,10 @@
 
 .about-us-first {
     font-style: italic;
-    font-weight: 300;
+    font-weight: 500;
     text-align: center;
     margin: 3rem;
+    font-size:21px;
 }
 
 .about-us-second-htwo {
@@ -44,17 +45,134 @@
     align-items: center;
 
 }
-.paragraph-two{
-    float:left;
+.paragraph-two {
     width: 55%;
     text-align: justify;
+    padding-top: 3rem;
+    margin: 2rem;
+    float: left;
 }
 .paragraph-two-image{
     float:right;
     width:40%;
+    justify-content:center;
 }
 .paragraph-two-image img{
 width:100%;
 height:auto;
 
 }
+.about-us-third{
+    margin: 3rem;
+    text-align: center;
+    display: flex;
+    justify-content: space-between;
+
+}
+.paragraph-three{
+    width: 55%;
+    text-align: justify;
+    padding-top: 3rem;
+    margin: 2rem;
+    float:right;
+    padding-top: 160px;
+}
+.paragraph-three-image{
+    float:left;
+    width:40%;
+    justify-content:center;
+}
+.paragraph-three-image img{
+    width:100%;
+height:auto;}
+.about-us-hfour{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.about-us-fourth{
+    margin: 3rem;
+    text-align: center;
+    display: flex;
+    justify-content: space-between;
+
+}
+.paragraph-four{
+    width: 55%;
+    text-align: justify;
+    padding-top: 2rem;
+    margin: 1rem;
+    float: left;
+
+}
+.paragraph-four-image{
+    float:right;
+    width:40%;
+    justify-content:center;
+}
+.paragraph-four-image img{
+    width: 100%;
+    height:auto;
+}
+.about-us-hfive{
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.about-us-fifth{
+    margin: 3rem;
+    text-align: center;
+    display: flex;
+    justify-content: space-between;
+}
+.paragraph-five{
+    width: 55%;
+    text-align: justify;
+    padding-top: 3rem;
+    margin: 2rem;
+    float:right;
+    margin: 25px;
+
+}
+.paragraph-five-image{
+    float:left;
+    width:40%;
+    justify-content:center;
+
+}
+.paragraph-five-image img{
+    width: 100%;
+    height:auto;
+}
+.about-us-container {
+    opacity: 0;
+    animation: fadeInAnimation 2s ease-in-out forwards;
+    animation-delay: 1s;
+  }
+  
+  @keyframes fadeInAnimation {
+    0% {
+      opacity: 0;
+    }
+    100% {
+      opacity: 1;
+    }
+  }
+  @media only screen and (max-width: 1024px) {
+     .about-us-container{
+        display: flex ;
+		flex-direction: column;
+		align-items: center;
+		justify-content: center;
+		}
+
+        .about-uscontent{
+        display: flex ;
+		flex-direction: column;
+		align-items: center;
+		justify-content: center;
+		padding: 1px;
+        width:100%; 
+        }
+  }
