--- a/src/components/Styles/favoritelist.css
+++ b/src/components/Styles/favoritelist.css
@@ -1,3 +1,8 @@
+.drop-down{
+    display: inline-block;
+    z-index: 10000;
+    position: relative;
+}
 .drop-down-selector{
   border-radius: 5px;
   background-color: #FF0000;
@@ -10,8 +15,8 @@
 
 }
 .drop-down-selector img{
- width:40px;
- height : 40px;
+ width:80px;
+ height: 80px;
  margin-right: 5px;
 }
 .drop-down-btn {
